--- a/package.json
+++ b/package.json
@@ -13,30 +13,31 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.0.32",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.14.2",
-    "@unocss/preset-uno": "^0.50.6",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.34.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
+    "@rushstack/eslint-patch": "^1.5.1",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/jsdom": "^21.1.3",
+    "@types/node": "^20.8.3",
+    "@unocss/preset-uno": "^0.56.5",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.51.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "typescript": "~4.8.4",
-    "unocss": "^0.50.6",
-    "vite": "^4.1.4",
-    "vitest": "^0.29.1",
-    "vue-tsc": "^1.2.0"
+    "prettier": "^3.0.3",
+    "typescript": "~5.2.2",
+    "unocss": "^0.56.5",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.16"
   }
 }
