--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-components-vue",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
